--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,30 +1,42 @@
-version: '3'
+version: '3.5'
 
 services:
         wordpress:
-                image: wordpress:latest
+                container_name: wordpress
+                build: ./requirements/wordpress
                 ports:
-                        - "8000:80"
+                        - "8080:80"
                 restart: always
+                volumes:
+                  - wp:/var/www/html
                 environment:
                         WORDPRESS_DB_USER: wordpress
                         WORDPRESS_DB_PASSWORD: wordpress
                         WORDPRESS_DB_NAME: wordpress
+                        WORDPRESS_DB_HOST: mariadb
 
         mariadb:
-                build: requirements/mariadb/
+                image: mariadb:10.7
                 container_name: mariadb
                 ports:
                         - "3306:3306"
+                volumes:
+                  - db:/var/lib/mariadb
                 restart: always
                 environment:
-                        MYSQL_ROOT_PASSWORD: password
                         MYSQL_DATABASE: wordpress
-                volumes:
-                - "~/Document/docker/mariadb:/var/lib/mysql"
-
+                        MYSQL_USER: wordpress
+                        MYSQL_PASSWORD: wordpress
+                        MYSQL_ROOT_PASSWORD: wordpress
+#                build: requirements/mariadb/
 
 volumes:
-        wp_database: {}
-        wp_files: {}
+        db: {}
+        wp: 
+                driver: local
+                name: wp
+                driver_opts:
+                        type: none
+                        o: bind
+                        device: /home/adesgran/data/wordpress
 
