--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,12 @@
-DB_NAME="wordpress"
-DB_ROOT="root"
-DB_USER="dbusr"
-DB_PASS="dbpwd"
-DB_HOST="mariadb:3306"
-ADMIN_USER="admin"
-ADMIN_PWD="adminpwd"
-ADMIN_MAIL="adesgran.dev@gmail.com"
-URL="localhost"
-WP_USER="adesgran"
-WP_USER_MAIL="adesgran.dev@gmail.com"
-WP_USER_PWD="adesgran"
+DB_NAME=wordpressdb
+DB_ROOT=root
+DB_USER=dbusr123456
+DB_PASS=dbpwd123456
+DB_HOST=mariadb
+ADMIN_USER=admin
+ADMIN_PWD=adminpwd
+ADMIN_MAIL=adesgran.dev@gmail.com
+URL=localhost
+WP_USER=adesgran
+WP_USER_MAIL=adesgran.dev@gmail.com
+WP_USER_PWD=adesgran
