--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,10 +9,10 @@ services:
                         context: requirements/wordpress
                         dockerfile: Dockerfile
                         args:
-                                DB_NAME: mariadb
-                                DB_USER: ${DB_USER}
-                                DB_PASS: ${DB_PASS}
-                                DB_ROOT: ${DB_ROOT}
+                                DB_NAME: $${DB_ROOT}
+                                DB_USER: $${DB_USER}
+                                DB_PASS: $${DB_PASS}
+                                DB_ROOT: $${DB_ROOT}
                 ports:
                         - "80:80"
                 restart: always
@@ -23,22 +23,18 @@ services:
                   - inception
 
         mariadb:
-                image: mariadb:latest
                 container_name: mariadb
+                build:
+                        context: requirements/mariadb
+                        dockerfile: Dockerfile
                 ports:
                         - "3306:3306"
-                environment:
-                        MYSQL_ROOT_PASSWORD: ${DB_ROOT}
-                        MYSQL_DATABASE: ${DB_NAME}
-                        MYSQL_USER: ${DB_USER}
-                        MYSQL_PASSWORD: ${DB_PASS}
                 volumes:
                   - db:/var/lib/mariadb
                 restart: always
                 networks:
                   - inception
                 env_file: .env
-#                build: requirements/mariadb/
 
 volumes:
         db: 
