--- a/srcs/requirements/mariadb/tools/mariadb.conf
+++ b/srcs/requirements/mariadb/tools/mariadb.conf
@@ -1,7 +1,10 @@
 [mysqld]
 user            = mysql
-socket          = /run/mysql/mysqld.sock
+socket          = /run/mysqld/mysqld.sock
 port            = 3306
 datadir         = /var/lib/mysql
 tmpdir          = /tmp
-
+bind-address    = 0.0.0.0
+query_cache_size        = 16M
+character-set-server  = utf8mb4
+collation-server      = utf8mb4_general_ci
