--- a/srcs/requirements/mariadb/tools/mariadb.conf
+++ b/srcs/requirements/mariadb/tools/mariadb.conf
@@ -1,5 +1,5 @@
 [mysqld]
-user            = mysql
+user            = root
 socket          = /run/mysqld/mysqld.sock
 port            = 3306
 datadir         = /var/lib/mysql
