--- a/srcs/.env
+++ b/srcs/.env
@@ -2,10 +2,10 @@ DB_NAME=wordpressdb
 DB_ROOT=root
 DB_USER=dbusr123456
 DB_PASS=dbpwd123456
-DB_HOST=mariadb
+DB_HOST=mariadb:3306
 ADMIN_USER=admin
 ADMIN_PWD=adminpwd
-ADMIN_MAIL=adesgran.dev@gmail.com
+ADMIN_MAIL=admindesgran.dev@gmail.com
 URL=localhost
 WP_USER=adesgran
 WP_USER_MAIL=adesgran.dev@gmail.com
