--- a/srcs/requirements/mariadb/tools/mariadb.conf
+++ b/srcs/requirements/mariadb/tools/mariadb.conf
@@ -8,3 +8,6 @@ bind-address    = 0.0.0.0
 query_cache_size        = 16M
 character-set-server  = utf8mb4
 collation-server      = utf8mb4_general_ci
+
+[client]
+socket=/run/mysqld/mysqld.sock
