--- a/srcs/requirements/wordpress/tools/www.conf
+++ b/srcs/requirements/wordpress/tools/www.conf
@@ -1,6 +1,12 @@
 ; Start a new pool named 'www'.
 ; the variable $pool can we used in any directive and will be replaced by the
 ; pool name ('www' here)
+
+[global]
+pid = run/php-fpm7.pid
+daemonize = yes
+
+
 [www-data]
 
 ; Per pool prefix
@@ -15,7 +21,6 @@
 ; Note: This directive can also be relative to the global prefix.
 ; Default Value: none
 ;prefix = /path/to/pools/$pool
-
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
