--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -5,19 +5,11 @@ http
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
         server {
-                listen 80;
-                listen [::]:80;
-                server_name localhost;
-                location / {
-                        rewrite ^ https://localhost:8443$request_uri? permanent;
-                }
-        }
-        server {
                 listen 443 ssl;
                 listen [::]:443 ssl;
                 server_name adesgran.42.fr;
                 root /var/www/;
-                index index.php;
+                index index.php
                 ssl_protocols TLSv1.2 TLSv1.3;
                 ssl_certificate /etc/nginx/ssl/inception.crt;
                 ssl_certificate_key /etc/nginx/ssl/inception.key;
