--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,10 +1,13 @@
 FROM debian:buster
 
-#ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND noninteractive
+
+EXPOSE 3306
 
 RUN mkdir -p /var/www/html
 RUN mkdir -p /usr/bin/wp
 RUN mkdir -p /usr/bin/wp
+RUN mkdir -p /run/php
 RUN mkdir -p /var/lib/docker/volumes/wp/_data
 
 
@@ -25,13 +28,12 @@ RUN uname -m
 
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 RUN chmod +x wp-cli.phar
+RUN chmod 777 /run/php
 RUN cp wp-cli.phar /usr/local/bin/wp
 
-COPY ./tools/* /var/www/
+COPY ./tools/wordpress_start.sh /var/www/
 COPY ./tools/www.conf /etc/php/7.3/fpm/php-fpm.conf
 
 RUN chmod a+x /var/www/wordpress_start.sh
 
 ENTRYPOINT [ "/var/www/wordpress_start.sh" ]
-
-#CMD ["sh", "/wordpress_start.sh"]
