LE SITE EST LAAA

--- a/srcs/.env
+++ b/srcs/.env
@@ -6,7 +6,7 @@ DB_HOST=mariadb:3306
 ADMIN_USER=admin
 ADMIN_PWD=adminpwd
 ADMIN_MAIL=admindesgran.dev@gmail.com
-URL=localhost
+URL=adesgran.42.fr
 WP_USER=adesgran
 WP_USER_MAIL=adesgran.dev@gmail.com
 WP_USER_PWD=adesgran
