--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -1,9 +1,15 @@
 events {}
 
-http
-{
+http {
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
+        server {
+                listen 80;
+                listen [::]:80;
+                server_name adesgran.42.fr;
+                return 301 https://localhost:443;
+        }
+
         server {
                 listen 443 ssl;
                 listen [::]:443 ssl;
@@ -14,7 +20,14 @@ http
                 ssl_certificate /etc/nginx/ssl/inception.crt;
                 ssl_certificate_key /etc/nginx/ssl/inception.key;
                 ssl_session_timeout 10m;
+                location /wordpress {
+                        return 302 /wordpress/;
+                }
+                location /wordpress/ {
+                        proxy_pass https://localhost/;
+                }
                 location / {
+                        autoindex on;
                         try_files $uri $uri/ =404;
                 }
                 location ~ \.php$ {
