--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -17,23 +17,22 @@ RUN apt-get -y install php7.3\
         php7.3-cli\
         mariadb-client\
         php-mysql\
-        php-fpm\
-        wget\
-        sendmail\
-        dialog\
-        apt-utils
-RUN apt-get clean
+        wget
+#RUN apt-get clean
 
 RUN uname -m
 
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 RUN chmod +x wp-cli.phar
-RUN chmod 777 /run/php
+RUN chmod -R 777 /run/php
 RUN cp wp-cli.phar /usr/local/bin/wp
 
 COPY ./tools/wordpress_start.sh /var/www/
 COPY ./tools/www.conf /etc/php/7.3/fpm/php-fpm.conf
 
+RUN chmod -R 755 /etc/php/7.3/fpm/php-fpm.conf
+RUN chmod -R 755 /var/www/
+RUN chown -R www-data:www-data /etc/php/7.3/fpm/php-fpm.conf
 RUN chmod a+x /var/www/wordpress_start.sh
 
 ENTRYPOINT [ "/var/www/wordpress_start.sh" ]
