--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -12,16 +12,17 @@ RUN     apt-get install -y openssl
 RUN     openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key \
         -subj "/C=FR/ST=IDF/L=Paris/O=42/CN=adesgran.42.fr/UID=adesgran"
 RUN     mkdir -p /var/www
-RUN     chmod 777 /var/www
-RUN     chmod 777 /var/www/html
-RUN     chown -R www-data:www-data /var/www
+RUN     chmod -R 777 /var/www/
+RUN     chmod -R 777 /var/www/html
+#RUN     chown -R www-data:www-data /var/www/
 
 RUN     cat /var/www/html/index.nginx-debian.html
 
 
 COPY    ./tools/nginx.conf /etc/nginx/nginx.conf
-RUN cat /etc/nginx/nginx.conf
+#RUN cat /etc/nginx/nginx.conf
 ADD     ./tools/default.conf /etc/nginx/conf.d/
+#COPY     ./tools/nginx.conf /etc/nginx/conf.d/default.conf
 
 RUN     ls /var/www/html
 
