--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -3,13 +3,7 @@ events {}
 http {
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
-        server {
-                listen 80;
-                listen [::]:80;
-                server_name adesgran.42.fr;
-                return 301 https://adesgran.42.fr;
-        }
-
+        include mime.types;
         server {
                 listen 443 ssl;
                 listen [::]:443 ssl;
