--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,11 @@
-DB_NAME=wordpressdb
-DB_ROOT=root
-DB_USER=dbusr123456
-DB_PASS=dbpwd123456
-DB_HOST=mariadb:3306
-ADMIN_USER=admin
-ADMIN_PWD=adminpwd
-ADMIN_MAIL=admindesgran.dev@gmail.com
+DB_NAME=hiuhghiujhu
+DB_ROOT=hiuhhuih
+DB_USER=fhviskhiku
+DB_PASS=fhieuwho
+ADMIN_USER=uhruh
+ADMIN_PWD=fvrhoiuhvr
+ADMIN_MAIL=fvrdoihj@hogtr.fgr
 URL=adesgran.42.fr
-WP_USER=adesgran
-WP_USER_MAIL=adesgran.dev@gmail.com
-WP_USER_PWD=adesgran
+WP_USER=frhoihg
+WP_USER_MAIL=liggrij@igjvrf.fr
+WP_USER_PWD=fceuhuoh
