--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -1,3 +1,8 @@
 upstream wordpress-upstream {
         server wordpress:9000;
 }
+server {
+        listen 80 default_server;
+        server_name _;
+        return 301 https://$host$request_uri;
+}
