--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -3,20 +3,19 @@ events {}
 http {
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
-        include mime.types;
         server {
                 listen 443 ssl;
                 listen [::]:443 ssl;
                 server_name adesgran.42.fr;
-                root /var/www/;
-                index index.php
+                root /var/www/html/wordpress;
+                index index.php index.nginx-debian.html;
                 ssl_protocols TLSv1.2 TLSv1.3;
                 ssl_certificate /etc/nginx/ssl/inception.crt;
                 ssl_certificate_key /etc/nginx/ssl/inception.key;
                 ssl_session_timeout 10m;
                 location / {
                         autoindex on;
-                        try_files $uri $uri/ =404;
+                        try_files $uri $uri/ /index.php$is_args$args;
                 }
                 location ~ \.php$ {
                         include snippets/fastcgi-php.conf;
