--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -1,29 +1,28 @@
-events {}
 
-http {
-        include /etc/nginx/conf.d/*.conf;
-        include /etc/nginx/sites-enabled/*;
-        server {
-                listen 443 ssl;
-                listen [::]:443 ssl;
-                server_name adesgran.42.fr;
-                root /var/www/html/wordpress;
-                index index.php index.nginx-debian.html;
-                ssl_protocols TLSv1.2 TLSv1.3;
-                ssl_certificate /etc/nginx/ssl/inception.crt;
-                ssl_certificate_key /etc/nginx/ssl/inception.key;
-                ssl_session_timeout 10m;
-                location / {
-                        autoindex on;
-                        try_files $uri $uri/ /index.php$is_args$args;
-                }
-                location ~ \.php$ {
-                        include snippets/fastcgi-php.conf;
-                        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                        fastcgi_pass wordpress:9000;
-                        include fastcgi_params;
-                        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                        fastcgi_param PATH_INFO $fastcgi_path_info;
-                }
+upstream wordpress-upstream {
+        server wordpress:9000;
+}
+
+server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name adesgran.42.fr;
+        root /var/www/html/wordpress;
+        index index.php index.nginx-debian.html;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_certificate /etc/nginx/ssl/inception.crt;
+        ssl_certificate_key /etc/nginx/ssl/inception.key;
+        ssl_session_timeout 10m;
+        location / {
+                autoindex on;
+                try_files $uri $uri/ /index.php$is_args$args;
+        }
+        location ~ \.php$ {
+                include snippets/fastcgi-php.conf;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass wordpress:9000;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param PATH_INFO $fastcgi_path_info;
         }
 }
